--- a/tetonpartyco/faq.html
+++ b/tetonpartyco/faq.html
@@ -105,9 +105,12 @@
             soon!
           </p>
           <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
-          <a class="insta" target="_blank" href="https://instagram.com"></a>
           <a class="site" href="site-plan.html">Siteplan</a>
-          <img class="insta" src="images/instagram.png" alt="instagram icon" />
+          <div class="insta">
+            <a target="_blank" href="https://www.instagram.com/"
+              ><img src="images/instagram.png" alt="instagram icon"
+            /></a>
+          </div>
         </div>
       </footer>
     </div>
