--- a/tetonpartyco/index.html
+++ b/tetonpartyco/index.html
@@ -73,8 +73,9 @@
           <p class="copyright">Teton Party Co. &copy; 2022 - TayLynn Harman</p>
           <a class="site" href="site-plan.html">Siteplan</a>
           <div class="insta">
-            <a target="_blank" href="https://www.instagram.com/"></a>
-            <img src="images/instagram.png" alt="instagram icon" />
+            <a target="_blank" href="https://www.instagram.com/"
+              ><img src="images/instagram.png" alt="instagram icon"
+            /></a>
           </div>
         </div>
       </footer>
