--- a/tetonpartyco/site-plan.html
+++ b/tetonpartyco/site-plan.html
@@ -44,8 +44,8 @@
 
 
       <table class="colors">
-        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th></tr>
-        <tr><td class="primary">[#F4ACB7]</td><td class="secondary">[#FFFFFF]</td><td class="accent1">[#F6CC5D]</td><td class="accent2">[#E6972B]</td><td class="accent3">[#E55F5C]</td> </tr>
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th></tr>
+        <tr><td class="primary">[#F4ACB7]</td><td class="secondary">[#FFFFFF]</td><td class="accent1">[#F6CC5D]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -57,7 +57,7 @@
         Heading Font: Amatic SC Regular, PT Serif, Lato
       </h4>
       <h4>
-        Paragraph Font: Lato, Verdana, Helvetica 
+        Paragraph Font: Serif, Tahoma, Verdana;
       </h4>
       <h3>
         Normal paragraph example
@@ -78,10 +78,9 @@
         Navigation
       </h3>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Reviews</a>
-        <a href="#">Pricing</a>
-        <a href="#">Policies</a>
+        <a href="index.html">Home</a>
+        <a href="reviews.html">Reviews</a>
+        <a href="faq.html">FAQS</a>
       </nav>
       <hr>
       <h2>
@@ -117,7 +116,14 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor! Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and how they bring people together to celebrate. I have always enjoyed creating beautiful spaces for people to gather in, especially themed celebrations. Just over the last year I have started creating balloon décor that is the perfect touch to any gathering! Thanks for checking things out, I hope to hear from you soon!
+        Welcome to Teton Party Co! We love to plan parties and give that extra "wow" factor with our customized balloon decor! 
+        </p>
+        <p>"I cannot say enough about Kay! She was easy to work with, quick
+        to respond, and you could tell she loves what she does. I have
+        worked with a lot of vendors due to my profession and you want
+        people like Kay working with you! Book her for your next event.
+        Thank me later!"</p> 
+        <p>Hi, I am Kayana! Owner and creator at Teton Party Co. I love parties and how they bring people together to celebrate. I have always enjoyed creating beautiful spaces for people to gather in, especially themed celebrations. Just over the last year I have started creating balloon décor that is the perfect touch to any gathering! Thanks for checking things out, I hope to hear from you soon!
       </p>
       <p>Images for the Home page</p>
         <img src="images/Barber.jpg" alt="Balloon arch over Barberpop Shop">
@@ -153,8 +159,9 @@
         
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/Plane Icon.jpg" alt="plane icon">
-        <img src="images/Contact Icon.jpg" alt="Contact icon">
+        <img src="images/planeicon.jpg" alt="plane icon">
+        <img src="images/ContactIcon.jpg" alt="Contact icon">
+        <img src="images/time.png" alt="Time icon">
 
       </ul>
       <hr>
@@ -168,15 +175,9 @@
       <img src="images/w1.jpeg" alt="home page wireframe">
 
       <h3>Projects</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
       <img src="images/w2.jpeg" alt="page 2 wireframe">
 
       <h3>FAQs</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
       <img src="images/w3.jpeg" alt="page 3 wireframe">
     </main>
   </body>
